--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600&family=Fraunces:opsz,wght@9..144,400;9..144,700;9..144,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://unpkg.com/split-type"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js" defer></script>
-    <script scr="scripts.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/TextPlugin.min.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/EasePack.min.js" defer></script>
+
+    <script src="./scripts.js" defer></script>
+
     <title>Animation</title>
 </head>
 <body>
     <main class="main-container">
         <section class="intro">
             <nav class="intro__nav container">
-                <h1 class="intro__logo"><a href="#"><img src="images/logo.svg" alt="logo of sunnyside" /></a></h1>
+              <a href="#"><img class="intro__logo" src="images/logo.svg" alt="logo of sunnyside" /></a></h1>
                 <ul class="intro__list">
                     <li>
                         <a href="#">About</a>
@@ -37,6 +42,6 @@
                 <img class="intro__arrow" src="images/icon-arrow-down.svg" alt="arrow-down" />
             </div>
         </section>
-</main>
+    </main>
 </body>
 </html>
