main part added

--- a/index.html
+++ b/index.html
@@ -59,6 +59,55 @@
                 <img class="intro__arrow" src="images/icon-arrow-down.svg" alt="arrow-down" />
             </div>
         </section>
+        <section class="main">
+
+                <div class="main__top--left wrapper">
+                    <div class="main__content">
+
+                        <h3 class="main__title">Transform your brand</h3>
+                        <p class="main__paragraph">  We are a full-service creative agency specializing in helping brands grow fast.
+                            Engage your clients through compelling visuals that do most of the marketing for you.
+
+                            </p>
+                        <a href="#" class="main__link">Learn more</a>
+                    </div>
+                </div>
+                <div class="main__top--right">
+                </div>
+
+
+                <div class="main__middle--left">
+                </div>
+                <div class="main__middle--right wrapper">
+                    <div class="main__content">
+
+                        <h3 class="main__title">Stand out to the right audience</h3>
+                        <p class="main__paragraph">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.
+
+                            </p>
+                        <a href="#" class="main__link">Learn more</a>
+                    </div>
+                </div>
+
+
+                <div class="main__bottom--left wrapper">
+                    <div class="main__content--small">
+                    <h3 class="main__title--small">Graphic design</h3>
+                    <p class="main__paragraph--small">  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
+                    </p>
+                </div>
+                </div>
+                <div class="main__bottom--right wrapper">
+                    <div class="main__content--small">
+
+                    <h3 class="main__title--small">Photography</h3>
+                    <p class="main__paragraph--small">  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+
+</div>
+
+                </div>
+
+        </section>
     </main>
 </body>
 </html>
