testimonials code added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://unpkg.com/split-type"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/TextPlugin.min.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/EasePack.min.js" defer></script>
 <script src="./gsap.js" defer></script>
@@ -64,7 +65,7 @@
                 <div class="main__top--left wrapper">
                     <div class="main__content">
 
-                        <h3 class="main__title">Transform your brand</h3>
+                        <h3 class="main__title title1">Transform your brand</h3>
                         <p class="main__paragraph">  We are a full-service creative agency specializing in helping brands grow fast.
                             Engage your clients through compelling visuals that do most of the marketing for you.
 
@@ -81,7 +82,7 @@
                 <div class="main__middle--right wrapper">
                     <div class="main__content">
 
-                        <h3 class="main__title">Stand out to the right audience</h3>
+                        <h3 class="main__title title2">Stand out to the right audience</h3>
                         <p class="main__paragraph">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.
 
                             </p>
@@ -92,7 +93,7 @@
 
                 <div class="main__bottom--left wrapper">
                     <div class="main__content--small">
-                    <h3 class="main__title--small">Graphic design</h3>
+                    <h3 class="main__title--small title3">Graphic design</h3>
                     <p class="main__paragraph--small">  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
                     </p>
                 </div>
@@ -100,12 +101,41 @@
                 <div class="main__bottom--right wrapper">
                     <div class="main__content--small">
 
-                    <h3 class="main__title--small">Photography</h3>
+                    <h3 class="main__title--small title4">Photography</h3>
                     <p class="main__paragraph--small">  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
 
 </div>
 
                 </div>
+
+        </section>
+        <section class="testimonials">
+            <h3 class="testimonials__title">
+                Client testimonials
+            </h3>
+            <div class="testimonials__wrapper">
+                <div class="testimonials__item">
+                    <img class="testimonials__img" src="/images/image-emily.jpg" alt="photo of Emily" />
+                    <p class="testimonials__content">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
+                    </p>
+                    <span class="testimonials__name">Emily R.</span>
+                    <span class="testimonials__role">Marketing director</span>
+                </div>
+                <div class="testimonials__item">
+                    <img class="testimonials__img" src="/images/image-thomas.jpg" alt="photo of Thomas" />
+                    <p class="testimonials__content">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
+                    </p>
+                    <span class="testimonials__name">Thomas S.</span>
+                    <span class="testimonials__role">Chief Operating Officer</span>
+                </div>
+                <div class="testimonials__item">
+                    <img class="testimonials__img" src="/images/image-jennie.jpg" alt="photo of Jennie" />
+                    <p class="testimonials__content">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+                    </p>
+                    <span class="testimonials__name">Jennie F.</span>
+                    <span class="testimonials__role">Business Owner</span>
+                </div>
+            </div>
 
         </section>
     </main>
